--- a/ToDoList/ToDoList.Web/ToDoList.Web.csproj
+++ b/ToDoList/ToDoList.Web/ToDoList.Web.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\ToDoList.Service\ToDoList.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
